--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -20,8 +20,45 @@ on:
     types: [ published ]
 
 jobs:
-  build:
+  prebuild:
 
+    runs-on: macos-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+        settings-path: ${{ github.workspace }} # location for the settings.xml file
+
+    - name: build
+      run: |
+          sudo mv /Library/Developer/CommandLineTools/SDKs/* /tmp
+          sudo mv /Applications/Xcode.app /Applications/Xcode.app.bak
+          sudo mv /Applications/Xcode_13.2.app /Applications/Xcode.app
+          sudo xcode-select -switch /Applications/Xcode.app
+          xcodebuild -version
+          brew install autogen autoconf automake libtool pkg-config wget isl cloog cmake gpg ant maven mpfr libmpc repo premake texinfo
+          mkdir moe-ci
+          cd moe-ci
+          repo init -u https://github.com/multi-os-engine/manifest.git -b moe-master
+          repo sync
+          cd prebuilts
+          ./gradlew llvm
+          
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+      with:
+          name: llvm
+          path: moe-ci/prebuilts/llvm/macos/lib/libclang.dylib
+  build:
+    needs: prebuild
     runs-on: macos-latest
     permissions:
       contents: read
