--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -22,7 +22,7 @@ on:
 jobs:
   prebuild:
 
-    runs-on: macos-latest
+    runs-on: macos-13
     permissions:
       contents: read
       packages: write
@@ -41,7 +41,7 @@ jobs:
       run: |
           sudo mv /Library/Developer/CommandLineTools/SDKs/* /tmp
           sudo mv /Applications/Xcode.app /Applications/Xcode.app.bak
-          sudo mv /Applications/Xcode_13.2.app /Applications/Xcode.app
+          sudo mv /Applications/Xcode_15.0.1.app /Applications/Xcode.app
           sudo xcode-select -switch /Applications/Xcode.app
           xcodebuild -version
           brew install autogen autoconf automake libtool pkg-config wget isl cloog cmake gpg ant maven mpfr libmpc repo premake texinfo
@@ -59,7 +59,7 @@ jobs:
           path: moe-ci/prebuilts/llvm/macos/lib/libclang.dylib
   build:
     needs: prebuild
-    runs-on: macos-latest
+    runs-on: macos-13
     permissions:
       contents: read
       packages: write
@@ -78,7 +78,7 @@ jobs:
       run: |
           sudo mv /Library/Developer/CommandLineTools/SDKs/* /tmp
           sudo mv /Applications/Xcode.app /Applications/Xcode.app.bak
-          sudo mv /Applications/Xcode_13.2.app /Applications/Xcode.app
+          sudo mv /Applications/Xcode_15.0.1.app /Applications/Xcode.app
           sudo xcode-select -switch /Applications/Xcode.app
           xcodebuild -version
           brew install autogen autoconf automake libtool pkg-config wget isl cloog cmake gpg ant maven mpfr libmpc repo premake texinfo
