--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -20,7 +20,8 @@ on:
     types: [ published ]
 
 jobs:
-  prebuild-llvm:
+  prebuild:
+
     runs-on: macos-14
     permissions:
       contents: read
@@ -36,7 +37,7 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-    - name: Build LLVM
+    - name: build
       run: |
           sudo mv /Library/Developer/CommandLineTools/SDKs/* /tmp
           sudo mv /Applications/Xcode.app /Applications/Xcode.app.bak
@@ -56,8 +57,8 @@ jobs:
       with:
           name: llvm
           path: moe-ci/prebuilts/llvm/macos/lib/libclang.dylib
-
-  prebuild-mingw:
+  build:
+    needs: prebuild
     runs-on: macos-14
     permissions:
       contents: read
@@ -73,7 +74,7 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-    - name: Build MingW
+    - name: Setup prebuild
       run: |
           sudo mv /Library/Developer/CommandLineTools/SDKs/* /tmp
           sudo mv /Applications/Xcode.app /Applications/Xcode.app.bak
@@ -87,58 +88,17 @@ jobs:
           repo sync
           cd prebuilts
           ./gradlew mingw
-          
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v3
-      with:
-          name: mingw
-          path: moe-ci/prebuilts/mingw/
-
-  build:
-    needs: [prebuild-llvm, prebuild-mingw]
-    runs-on: macos-14
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
-
-    - name: Sync project
-      run: |
-          sudo mv /Library/Developer/CommandLineTools/SDKs/* /tmp
-          sudo mv /Applications/Xcode.app /Applications/Xcode.app.bak
-          sudo mv /Applications/Xcode_15.4.app /Applications/Xcode.app
-          sudo xcode-select -switch /Applications/Xcode.app
-          xcodebuild -version
-          brew install autogen autoconf automake libtool pkg-config wget isl cloog cmake gpg ant maven mpfr libmpc repo premake texinfo
-          mkdir moe-ci
-          cd moe-ci
-          repo init -u https://github.com/multi-os-engine/manifest.git -b moe-master
-          repo sync
+          mkdir -p moe-ci/prebuilts/llvm/macos/lib/
 
     - uses: actions/download-artifact@v3
       with:
           name: llvm
           path: moe-ci/prebuilts/llvm/macos/lib/
-    
-    - uses: actions/download-artifact@v3
-      with:
-          name: mingw
-          path: moe-ci/prebuilts/mingw
           
     - name: Inspect
       run: |
         ls -l
         ls -l moe-ci/prebuilts/llvm/macos/lib/
-        ls -l moe-ci/prebuilts/mingw/
 
     - name: Build MOE
       run: |
