--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -50,7 +50,7 @@ jobs:
         java-version: |
           8
           11
-        distribution: 'temurin'
+        distribution: 'corretto'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
@@ -89,7 +89,7 @@ jobs:
         java-version: |
           8
           11
-        distribution: 'temurin'
+        distribution: 'corretto'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
