--- a/.github/workflows/test_jdkgen.yml
+++ b/.github/workflows/test_jdkgen.yml
@@ -1,46 +1,41 @@
-name: Prebuild
+name: Gradle Package
 
 on:
   workflow_dispatch:        
   
-  release:
-    types: [ published ]
-
 jobs:
   build:
-
-    runs-on: macos-latest
+    runs-on: macos-15
     permissions:
       contents: read
       packages: write
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
-        distribution: 'temurin'
+        java-version: 17
+        distribution: 'corretto'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-    - name: build
+    - name: Setup prebuild
       run: |
           sudo mv /Library/Developer/CommandLineTools/SDKs/* /tmp
           sudo mv /Applications/Xcode.app /Applications/Xcode.app.bak
-          sudo mv /Applications/Xcode_13.2.app /Applications/Xcode.app
+          sudo mv /Applications/Xcode_16.app /Applications/Xcode.app
           sudo xcode-select -switch /Applications/Xcode.app
           xcodebuild -version
           brew install autogen autoconf automake libtool pkg-config wget isl cloog cmake gpg ant maven mpfr libmpc repo premake texinfo
           mkdir moe-ci
           cd moe-ci
-          repo init -u https://github.com/multi-os-engine/manifest.git -b moe-master
-          repo sync
-          cd prebuilts
-          ./gradlew llvm
+          repo init -u https://github.com/multi-os-engine/manifest.git -b moe-svm
+          repo sync -j$(sysctl -n hw.ncpu)
           
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v3
-      with:
-          name: llvm
-          path: moe-ci/prebuilts/llvm/macos/lib/libclang.dylib
+    - name: Build MOE
+      run: |
+          cd moe-ci/moe/
+          ./gradlew :moe-core:moe.apple:moe.core.native:svm.openjdk:jdk_gensrc
+          
+      
