--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -75,8 +75,8 @@ jobs:
           cd moe-ci
           repo init -u https://github.com/multi-os-engine/manifest.git -b ${{ inputs.branch }}
           repo sync
-          cd moe/prebuilts
-          ./gradlew llvm
+          cd moe
+          ./gradlew :prebuilts:llvm
           
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
@@ -112,9 +112,8 @@ jobs:
           cd moe-ci
           repo init -u https://github.com/multi-os-engine/manifest.git -b ${{ inputs.branch }}
           repo sync
-          cd moe/prebuilts
-          ./gradlew mingw
-          mkdir -p moe-ci/moe/prebuilts/llvm/macos/lib/
+          cd moe
+          ./gradlew :prebuilts:mingw
 
     - uses: actions/download-artifact@v4
       with:
