--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -104,7 +104,7 @@ jobs:
       run: |
         echo "Public IP: $(curl -s https://ipinfo.io/ip)"
 
-    - name: Setup prebuild
+    - name: Setup
       run: |
           sudo mv /Library/Developer/CommandLineTools/SDKs/* /tmp
           sudo mv /Applications/Xcode.app /Applications/Xcode.app.bak
@@ -116,8 +116,6 @@ jobs:
           cd moe-ci
           repo init -u https://github.com/multi-os-engine/manifest.git -b ${{ inputs.branch }}
           repo sync
-          cd moe
-          ./gradlew :prebuilts:mingw
 
     - uses: actions/download-artifact@v4
       with:
