--- a/.github/workflows/publish_moe_1.yml
+++ b/.github/workflows/publish_moe_1.yml
@@ -5,7 +5,7 @@
 # This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
 
-name: Gradle Package
+name: Build MOE 2
 
 on:
   workflow_dispatch:
@@ -116,6 +116,8 @@ jobs:
           cd moe-ci
           repo init -u https://github.com/multi-os-engine/manifest.git -b ${{ inputs.branch }}
           repo sync
+          cd moe
+          ./gradlew :prebuilts:mingw
 
     - uses: actions/download-artifact@v4
       with:
